 - Updated hiphp-desktop commands to enhance user experience.
 - Refined hiphp-tk commands for improved functionality.
 - Streamlined installation process on Ubuntu OS.
 - Centralized command control and execution via 'main.py' file.
 - Updated help menu.
 - Fixed websites scanner on hiphp-cli.
 - Changed license from "Apache Software License" to "MIT License."
 - Addressed bug fixes and implemented performance improvements for a more reliable experience.

## 0.3.1 [06-03-2023]
 - Fix hiphp-desktop on docker and others.
 - Add new menu.
 - Bug fixes & performance improvements.

## 0.3.0 [02-01-2023]
 - Bug fixes & performance improvements.

## 0.2.35 [17-12-2022]
 - Add the ability to contact with proxies, beta for hiphp-cli only.
 - Bug fixes & performance improvements.

## 0.2.34 [17-12-2022]
 - Update workflows to work on python 3.7->3.9.
 - Update documents.
 - Update "Makefile" to work on any operating system.
 - Delete Android app ".apk".
 - Delete ".exe" direct play files on windows.
 - Upgrade and change the locations of some files.
 - Cancellation Release hiphp v3.0.0.
 - Bug fixes & performance improvements.

## 0.2.33 [05-12-2022]
 - Bug fixes & performance improvements.

## 0.2.32 [05-12-2022]
 - Update template in "hiphp-desktop".
 - Update documents.
 - Bug fixes & performance improvements.

## 0.2.31 [27-11-2022]
 - Add PWA (Service Worker) to "hiphp-desktop".
 - Updated installation options.
 - Update site files.
 - Add PWA installer as an option to settings in "hiphp-desktop".
 - Fix Dark Mode option.
 - Fix File Creation, Modification and Access Date in "hiphp-desktop".
 - Add a multiple selector in "hiphp-desktop".
 - Fix running on Windows.
 - Activate the arrow feature to return to previous commands (only for Linux).
 - Add login window on "hiphp-tk".
 - Update List information about the FILEs "hiphp-cli".
 - Bug fixes & performance improvements.

## 0.2.30 [02-11-2022]
 - Fix auto login in "hiphp-desktop".
 - Fix file info in "hiphp-desktop".